tests/ui/pattern/usefulness/integer-ranges/exhaustiveness.stderr
error[E0004]: match is non-exhaustive
  --> $DIR/exhaustiveness.rs:47:8
   |
LL |     m!(0u8, 0..255);
   |        ^^^ pattern `u8::MAX` not covered
   |
   = note: the matched value is of type `u8`
help: ensure that all possible cases are being handled by adding an arm to handle the `u8::MAX` case
   |
LL |         match $s { $($t)+ => {}, u8::MAX => { todo!() } }
   |                                ++++++++++++++++++++++++

error[E0004]: match is non-exhaustive
  --> $DIR/exhaustiveness.rs:48:8
   |
LL |     m!(0u8, 0..=254);
   |        ^^^ pattern `u8::MAX` not covered
   |
   = note: the matched value is of type `u8`
help: ensure that all possible cases are being handled by adding an arm to handle the `u8::MAX` case
   |
LL |         match $s { $($t)+ => {}, u8::MAX => { todo!() } }
   |                                ++++++++++++++++++++++++

error[E0004]: match is non-exhaustive
  --> $DIR/exhaustiveness.rs:49:8
   |
LL |     m!(0u8, 1..=255);
   |        ^^^ pattern `0_u8` not covered
   |
   = note: the matched value is of type `u8`
help: ensure that all possible cases are being handled by adding an arm to handle the `0_u8` case
   |
LL |         match $s { $($t)+ => {}, 0_u8 => { todo!() } }
   |                                +++++++++++++++++++++

error[E0004]: match is non-exhaustive
  --> $DIR/exhaustiveness.rs:50:8
   |
LL |     m!(0u8, 0..42 | 43..=255);
   |        ^^^ pattern `42_u8` not covered
   |
   = note: the matched value is of type `u8`
help: ensure that all possible cases are being handled by adding an arm to handle the `42_u8` case
   |
LL |         match $s { $($t)+ => {}, 42_u8 => { todo!() } }
   |                                ++++++++++++++++++++++

error[E0004]: match is non-exhaustive
  --> $DIR/exhaustiveness.rs:51:8
   |
LL |     m!(0i8, -128..127);
   |        ^^^ pattern `i8::MAX` not covered
   |
   = note: the matched value is of type `i8`
help: ensure that all possible cases are being handled by adding an arm to handle the `i8::MAX` case
   |
LL |         match $s { $($t)+ => {}, i8::MAX => { todo!() } }
   |                                ++++++++++++++++++++++++

error[E0004]: match is non-exhaustive
  --> $DIR/exhaustiveness.rs:52:8
   |
LL |     m!(0i8, -128..=126);
   |        ^^^ pattern `i8::MAX` not covered
   |
   = note: the matched value is of type `i8`
help: ensure that all possible cases are being handled by adding an arm to handle the `i8::MAX` case
   |
LL |         match $s { $($t)+ => {}, i8::MAX => { todo!() } }
   |                                ++++++++++++++++++++++++

error[E0004]: match is non-exhaustive
  --> $DIR/exhaustiveness.rs:53:8
   |
LL |     m!(0i8, -127..=127);
   |        ^^^ pattern `i8::MIN` not covered
   |
   = note: the matched value is of type `i8`
help: ensure that all possible cases are being handled by adding an arm to handle the `i8::MIN` case
   |
LL |         match $s { $($t)+ => {}, i8::MIN => { todo!() } }
   |                                ++++++++++++++++++++++++

error[E0004]: match is non-exhaustive
  --> $DIR/exhaustiveness.rs:54:11
   |
LL |     match 0i8 {
   |           ^^^ pattern `0_i8` not covered
   |
   = note: the matched value is of type `i8`
help: ensure that all possible cases are being handled by adding an arm to handle the `0_i8` case
   |
LL ~         1 ..= i8::MAX => {}
LL +         0_i8 => { todo!() }
   |

error[E0004]: match is non-exhaustive
  --> $DIR/exhaustiveness.rs:59:8
   |
LL |     m!(0u128, 0..=ALMOST_MAX);
   |        ^^^^^ pattern `u128::MAX` not covered
   |
   = note: the matched value is of type `u128`
help: ensure that all possible cases are being handled by adding an arm to handle the `u128::MAX` case
   |
LL |         match $s { $($t)+ => {}, u128::MAX => { todo!() } }
   |                                ++++++++++++++++++++++++++

error[E0004]: match is non-exhaustive
  --> $DIR/exhaustiveness.rs:60:8
   |
LL |     m!(0u128, 0..=4);
   |        ^^^^^ pattern `5_u128..=u128::MAX` not covered
   |
   = note: the matched value is of type `u128`
help: ensure that all possible cases are being handled by adding an arm to handle the `5_u128..=u128::MAX` case
   |
LL |         match $s { $($t)+ => {}, 5_u128..=u128::MAX => { todo!() } }
   |                                +++++++++++++++++++++++++++++++++++

error[E0004]: match is non-exhaustive
  --> $DIR/exhaustiveness.rs:61:8
   |
LL |     m!(0u128, 1..=u128::MAX);
   |        ^^^^^ pattern `0_u128` not covered
   |
   = note: the matched value is of type `u128`
help: ensure that all possible cases are being handled by adding an arm to handle the `0_u128` case
   |
LL |         match $s { $($t)+ => {}, 0_u128 => { todo!() } }
   |                                +++++++++++++++++++++++

error[E0004]: match is non-exhaustive
  --> $DIR/exhaustiveness.rs:69:11
   |
LL |     match (0u8, true) {
   |           ^^^^^^^^^^^ pattern `(126_u8..=127_u8, false)` not covered
   |
   = note: the matched value is of type `(u8, bool)`
help: ensure that all possible cases are being handled by adding an arm to handle the `(126_u8..=127_u8, false)` case
   |
LL ~         (0 ..= 255, true) => {}
LL +         (126_u8..=127_u8, false) => { todo!() }
   |

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0004`.
